# jax-fs

./: .gitignore  .initial-publish  CLAUDE.md  Cargo.toml  INSTALL.md  PROTOCOL.md  README.md  USAGE.md  docker-compose.yml
crates/app/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/app/.sqlx/: query-0b8f247c5b79fbe2ded6d16f44b27875b226d52e6b0f922ab25f77ce12ba6c50.json  query-1b32a3cf9635b11ca726e90485b53675ef392ad5d9417b562b1319c842edaeea.json  query-31d24502c0f5cddba10db1ee74caefbe462605011387ac3d283947496e908bb0.json  query-434fc606030ab6df105fa814110517d1c311e1800f6ab7448439b3d9075ac164.json  query-6f2cfe3cf6a74b14ee7be9f06e3df0281bb141a5e02ace9395cef7c4e886ea56.json  query-951b1e6fbd96b73f36a1f3703abcadc17f66e88f8f5ce1e5ff618a0f8262a65c.json  query-f817fe2e547456c0e82ce1793236566c7d243d9109ceae4e77bed51c87138594.json
crates/app/agents/: sqlite-sync-provider-example.md
crates/app/agents/templating/: templating-ui-system.md
crates/app/data/: node.db
crates/app/here/: db.sqlite-shm  db.sqlite-wal  key.pem
crates/app/here/blobs/: blobs.db
crates/app/migrations/: 20251010000000_add_sync_columns.up.sql  20251030000000_create_bucket_log.down.sql  20251031000000_add_published_to_bucket_log.down.sql  20251031000000_add_published_to_bucket_log.up.sql  20251223000000_create_blobs_store.down.sql  20251223000000_create_blobs_store.up.sql  20260105000000_create_fuse_mounts.down.sql  20260105000000_create_fuse_mounts.up.sql
crates/app/src/: args.rs  lib.rs  main.rs  op.rs  state.rs
crates/app/src/daemon/: app_state.rs  config.rs  gateway_process.rs  mod.rs  mount_manager.rs  state.rs  types.rs
crates/app/src/daemon/blobs/: mod.rs  setup.rs
crates/app/src/daemon/database/: bucket_log_provider.rs  bucket_queries.rs  mod.rs  mount_queries.rs  sqlite.rs
crates/app/src/daemon/http_server/: config.rs  gateway_index.rs  (+1 more)
crates/app/src/fuse/: cache.rs  inode_table.rs  jax_fs.rs  mod.rs
crates/app/src/ops/: daemon.rs  gw.rs  init.rs  mod.rs
crates/app/static/: 404.html  app.js  style.css
crates/app/static/js/: inline-editor.js  note-editor.js  tree-viewer.js
crates/app/templates/: base.html  bucket_explorer.html  bucket_logs.html  buckets.html  file_viewer.html  index.html  peers_explorer.html  pins_explorer.html
crates/app/templates/components/: explorer_sidebar.html  file_viewer_sidebar.html  historical_banner.html  share_modal.html
crates/app/templates/layouts/: explorer.html
crates/app/templates/pages/: index.html
crates/app/test-1/: db.sqlite-shm  db.sqlite-wal  key.pem
crates/app/test-1/blobs/: blobs.db
crates/app/test-2/: config.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal  key.pem
crates/app/test-2/blobs/: blobs.db
crates/app/test-data/: config.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal  key.pem
crates/app/test-data/blobs/: blobs.db
crates/common/: CHANGELOG.md  Cargo.toml  README.md
crates/common/src/: bucket_log_provider.rs  bucket_state_provider.rs  lib.rs
crates/common/src/bucket_log/: memory.rs  provider.rs
crates/common/src/crypto/: keys.rs  mod.rs  secret.rs  secret_share.rs
crates/common/src/mount/: conflict.rs  manifest.rs  maybe_mime.rs  mod.rs  mount.rs  mount_inner.rs  node.rs  path_ops.rs  pins.rs  principal.rs
crates/common/src/peer/: blobs_store.rs  jobs.rs  mod.rs  peer.rs  peer_builder.rs  peer_inner.rs  peer_state.rs  sync.rs
crates/common/src/testkit/: mod.rs  network.rs  peer.rs
crates/common/tests/: add.rs  conflict_resolution.rs  ls.rs  mirror.rs  mkdir.rs  mount_tests.rs  mv.rs  ops_log.rs  persistence.rs  rm.rs
crates/common/tests/common/: mod.rs
crates/daemon/: CHANGELOG.md  Cargo.toml
crates/daemon/src/: clone_state.rs  lib.rs  main.rs  service_config.rs  service_state.rs
crates/daemon/src/cli/: args.rs  mod.rs  op.rs
crates/daemon/src/daemon/: mod.rs
crates/daemon/src/database/: bucket_log_provider.rs  bucket_queries.rs  sqlite.rs
crates/daemon/src/fuse/: jax_fs.rs  mount_manager.rs
crates/daemon/src/http_server/: config.rs  gateway_index.rs  mod.rs
crates/daemon/src/process/: mod.rs
crates/daemon/tests/: mount_integration.rs
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/src/: lib.rs  tray.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/local/: Cargo.toml
crates/local/src/: lib.rs  main.rs
crates/local/src/http/: mod.rs
crates/object-store/: CHANGELOG.md  Cargo.toml  README.md
crates/object-store/migrations/: 20251223000000_create_blobs_store.sql
crates/object-store/src/: actor.rs  database.rs  error.rs  lib.rs  object_store.rs  storage.rs
crates/service/: Cargo.toml
crates/service/.sqlx/: query-41eec8f3c325ceeac2adb295ca929c161556818d958a5eb2d50d8378383abf38.json  query-68c705094df592b33fb03e766d6ce844b2b954bc9eb5e11ab16ead033c0b7c5f.json  query-7715eb082b7c5a09175a1b45320128e6fd0b189aeaf1a7cc524f324ee29ba7a8.json  query-7b2cbe1d3f1a1085c8d3f0a4aa08ee9cb535c82657d66b61922d19ac052bb49b.json  query-8741a5eeaae327cfc05403909145c4cb0ead1eb2a2bf82922e64642c6aa61f02.json  query-b16de3803be3ce16436473c9ff8697ad5218d599abd5133b1d8d40e1b9b79901.json  query-b8841aff2bbb1b933337588b7169c6243e9ed2961e86851b02ee6e10f1931bd3.json  query-d28d1fac578f924f982a9e97da30713f714a88ca57cd29df7a9ec3f4c47bd526.json
crates/service/migrations/: 20240414015317_bucket.up.sql  20251010000000_add_sync_columns.down.sql  20251030000000_create_bucket_log.up.sql  20251030000001_drop_bucket.sql
crates/service/src/: lib.rs  peer_state.rs  state.rs  sync_coordinator.rs  sync_provider.rs
crates/service/src/database/: bucket_log_provider.rs  bucket_queries.rs  mod.rs  sqlite.rs
crates/service/src/http/: config.rs  mod.rs
crates/service/src/process/: mod.rs
crates/service/static/: app.js  style.css
crates/service/static/js/: inline-editor.js
crates/service/templates/layouts/: base.html  explorer.html
crates/service/templates/pages/: not_found.html
crates/tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src-tauri/capabilities/: default.json
crates/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
(+305 files in other folders)
