[workspace]
resolver = "2"
members = ["crates/app", "crates/common", "crates/blobs-store"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jax-ethdenver-2025/jax-bucket"
homepage = "https://github.com/jax-ethdenver-2025/jax-bucket"
keywords = ["p2p", "encryption", "storage", "ipfs", "sync"]
categories = ["cryptography", "network-programming", "filesystem"]

[workspace.dependencies]
# Core async/error handling
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
bincode = "1.3"
bytes = "1.5"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = [
    "load-shed",
    "limit",
    "timeout",
    "util",
] }
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "sensitive-headers",
    "trace",
    "limit",
    "util",
] }
http = "1.0"

# Networking/HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
] }
url = { version = "2.5", features = ["serde"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "local-time",
    "time",
    "tracing",
] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# IPFS/P2P
# iroh = { version = "^0.35", features = ["discovery-pkarr-dht"] }
iroh = { version = "^0.93", features = ["discovery-pkarr-dht"] }
# iroh-blobs = { version = "^0.35", features = ["rpc"] }
iroh-blobs = { version = "^0.95" }
cid = { version = "0.11", features = ["serde"] }
ipld-core = { version = "0.4", features = ["serde"] }
serde_ipld_dagcbor = "0.6"

# Time/UUID
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Utility
thiserror = "1.0"
parking_lot = "0.12"
directories = "5.0"
dirs = "5.0"
toml = "0.8"
pem = "3.0"
tempfile = "3.8"
mime_guess = "2.0"

# Template engine
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
