[package]
name = "jax-tauri"
version = "0.1.0"
description = "JAX Bucket Desktop App"
authors = ["JAX Team"]
edition = "2021"
license = "MIT"

[lib]
name = "jax_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "jax-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace crates
jax-bucket = { path = "../../app" }
common = { package = "jax-common", path = "../../common" }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utility
dirs = { workspace = true }
uuid = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework (for embedded gateway)
axum = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
